--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap');
+
 body{
+    font-family: 'Roboto', sans-serif;
     background-color: blueviolet;
-};
+}
+
+#main{
+    display: flex;
+    justify-content: space-between;
+}
+
+input {
+    background-color: rgb(113, 47, 180);
+    border: none;
+    padding-left: 7px;
+    padding-top: 5px;
+    padding-right: 7px;
+    padding-bottom: 5px;
+}
+
+select{
+    background-color: rgb(113, 47, 180);
+    border: none;
+}
