--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+
 
 body{
-    font-family: 'Roboto', sans-serif;
-    background-color: blueviolet;
+    font-family: 'Lobster', cursive;
+    background-image: url("../Image/SpaceShipImage.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-#main{
-    display: flex;
-    justify-content: space-between;
+p{
+    font-size: 75px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    color: #6439ff;
 }
+
+
 
 input {
-    background-color: rgb(113, 47, 180);
+    font-family: 'Oswald', sans-serif;
+    background-color: rgba(166, 120, 212, 0.678);
+    color: #6743eb;
+    font-size: 35px;
     border: none;
-    padding-left: 7px;
-    padding-top: 5px;
-    padding-right: 7px;
-    padding-bottom: 5px;
+    padding-left: 14px;
+    padding-top: 10px;
+    padding-right: 14px;
+    padding-bottom: 10px;
 }
 
 select{
-    background-color: rgb(113, 47, 180);
+    font-family: 'Oswald', sans-serif;
+    font-size: 48px;
+    color: #6743eb;
+    background-color: rgba(166, 120, 212, 0.678);
     border: none;
 }
+
+#Age{
+    height: 50px;
+    width: 140px;
+
+}
+
+#Contry{
+    height: 50px;
+    width: 300px;
+}
+
+#Categories{
+    height: 50px;
+    width: 250px;
+}
+
