--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body{
     font-family: 'Lobster', cursive;
-
+    background-image: url("../SpaceShipImage.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -33,11 +33,7 @@ input {
 }
 
 select{
-    font-family: 'Oswald', sans-serif;
-    font-size: 48px;
-    color: #6743eb;
-    background-color: rgba(166, 120, 212, 0.678);
-    border: none;
+
 }
 
 #Age{
