--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,11 @@ body{
 }
 
 p{
+    font-family: 'Oswald', sans-serif;
     font-size: 35px;
     margin-top: 21px;
     margin-bottom: 21px;
-    color: #4714ff;
+    color: #ffffff;
 }
 
 
@@ -24,7 +25,7 @@ p{
 input {
     font-family: 'Oswald', sans-serif;
     background-color: rgba(166, 120, 212, 0.678);
-    color: #4714ff;
+    color: #ffffff;
     font-size: 22px;
     border: none;
     padding-left: 12px;
@@ -36,7 +37,7 @@ input {
 select{
     font-family: 'Oswald', sans-serif;
     font-size: 22px;
-    color: #4714ff;
+    color: rgb(255, 255, 255);
     background-color: rgba(166, 120, 212, 0.678);
     border: none;
 }
@@ -56,4 +57,6 @@ select{
     height: 28px;
     width: 110px;
 }
+
+
 
