--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
 
 
 body{
-    font-family: 'Lobster', cursive;
+    font-family: 'Russo One', sans-serif;
     background-image: url("../SpaceShipImage.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -13,7 +10,7 @@ body{
 }
 
 p{
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Russo One', sans-serif;
     font-size: 35px;
     margin-top: 21px;
     margin-bottom: 21px;
@@ -23,7 +20,7 @@ p{
 
 
 input {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Russo One', sans-serif;
     background-color: rgba(166, 120, 212, 0.678);
     color: #ffffff;
     font-size: 22px;
@@ -35,14 +32,14 @@ input {
 }
 
 select{
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Russo One', sans-serif;
     font-size: 22px;
     color: rgb(255, 255, 255);
     background-color: rgba(166, 120, 212, 0.678);
     border: none;
 }
 
-#Age{
+#Year{
     height: 28px;
     width: 80px;
 
@@ -57,6 +54,3 @@ select{
     height: 28px;
     width: 110px;
 }
-
-
-
